Fix live site link in index.html

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <p>An interactive coding learning platform featuring Java concepts, quizzes, user authentication, and educational resources. Provides a comprehensive environment for learning programming with hands-on exercises and tutorials.</p>
                     <p><strong>Technologies:</strong> HTML, CSS, JavaScript, Node.js</p>
                     <a href="https://github.com/deepakgowrishankar7/letscode" class="btn" target="_blank">View on GitHub</a>
-                    <a href="https://deepakgowrishankar7.github.io/Let-s-Code/#" class="btn" target="_blank">View Live Site</a>
+                    <a href="https://deepakgowrishankar7.github.io/Let-s-Code/" class="btn" target="_blank">View Live Site</a>
                 </div>
                 <!-- Add more projects as needed -->
             </div>
